
2021-02-04  James K. Lowden  <jklowden@symas.com>

	* cobc.h cobc.c error.c pplex.l:
	allocate cb_listing_file_struct statically.  All tests pass, some leaks.

2021-02-01  James K. Lowden  <jklowden@symas.com>

	* cobc.c (process_command_line): simplify cob_schema_dir initialization

2021-01-29  James K. Lowden  <jklowden@symas.com>

	* cobc.c: apply spatch/cast.spatch

2021-02-01  Ron Norman <rjn@inglenet.com>
	* parser.y: Removed PENDING for COMMIT/ROLLBACK options
	* typeck.c: Set on COB_LOCK_ROLLBACK as requested

2021-01-28  James K. Lowden  <jklowden@symas.com>

	* cobc.c (cobc_error_name): do not write to const parameter

2021-01-28  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Added checks for NN - Minutes, JJJ - day of year
				EEE - day of year, TT - hundreds of second

2021-01-27  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Verify supplied SQL column name has no conflicts
			Fixes for COMP-6 fields
			New options for the first XFD of a record.
			KEEP FILLER - indicates to keep and morph the name
				of FILLER fields, otherwise FILLER does not
				go into the SQL table.
			KEEP PREFIX - indicates to keep the common prefix
				of fields in the record. The default is to
				remove it.

2021-01-22  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c (get_col_name): Gives Warning when FILLER used
			and maps the to a unique name within the record

2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* sqlxfdgen.c (get_col_name): prevent internal "spaced" variable
	  names like "FILLER 15" to generate invalid sql names
	* cobc.c (cobc_print_version): welcome 2021

2020-12-23  Ron Norman <rjn@inglenet.com>

	* cobc.c: --info Displays short (concatenated) list of available
	  INDEXED file handlers

2020-12-15  Ron Norman <rjn@inglenet.com>

	* cobc.c: --info output includes VB-ISAM in C-ISAM mode

2020-12-13  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (propagate_table): reduced codegen for INITIALIZE to a single